# Echonium

./: Cargo.toml  README.MD
src/: config.rs  main.rs  template.rs
src/database/: handler.rs  mod.rs
src/ping/: icmp.rs  mod.rs  result.rs
src/route/: router.rs
templates/: ping.html
