[package]
name = "echonium"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.9"
once_cell = "1.20.2"
rrd = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["sqlite"] }
surge-ping = "0.8.1"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
